# Scanify_AI

./: .gitignore  README.md  app.py  env.sample  main.py  push_data.py  pyproject.toml  setup.py  test_mongodb.py
Artifacts/08_09_2025_13_33_27/data_ingestion/ingested/: test.csv  train.csv
Artifacts/08_11_2025_19_10_14/data_ingestion/ingested/: test.csv  train.csv
Artifacts/08_11_2025_19_11_50/data_ingestion/ingested/: test.csv  train.csv
Artifacts/08_11_2025_19_15_43/data_ingestion/ingested/: test.csv  train.csv
Artifacts/08_11_2025_19_16_32/data_ingestion/ingested/: test.csv  train.csv
Artifacts/08_11_2025_19_16_32/data_validation/drift_report/: report.yaml
Artifacts/08_12_2025_09_50_39/data_validation/drift_report/: report.yaml
Artifacts/08_12_2025_09_50_39/data_validation/validated/: test.csv  train.csv
Artifacts/08_12_2025_09_53_45/data_ingestion/ingested/: train.csv
Artifacts/08_12_2025_09_53_45/data_validation/drift_report/: report.yaml
Artifacts/08_12_2025_09_53_45/data_validation/validated/: test.csv
final_model/: preprocessor.pkl
mlruns/0/: meta.yaml
mlruns/0/50a0df40b2514b3ca04bd8374d2eb6f6/: meta.yaml
mlruns/0/c6589aa0e4454bfdb75fffbc3baae0dd/: meta.yaml
scanify_ai/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_trainer.py
scanify_ai/constant/training_pipeline/: __init__.py
scanify_ai/entity/: artifact_entity.py  config_entity.py
scanify_ai/exception/: exception.py
scanify_ai/logging/: log_config.py
scanify_ai/pipeline/: training_pipeline.py
scanify_ai/utils/main_utils/: utils.py
(+80 files in other folders)
