[project]
name = "scanify_ai"
version = "0.0.1"
description = "Malicious website scanner using Python, MongoDB, and AI techniques"
authors = [
  { name="Nakul Kejriwal", email="nakulkejriwal@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "python-dotenv",
  "pandas",
  "numpy",
  "setuptools",
  "pymongo",
  "certifi"
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["scanify_ai"]
